# sidestacker

./: .env  Cargo.toml  config.yaml
client/: Cargo.toml
client/src/: error.rs  lib.rs  session.rs
client/src/game/: board.rs  mod.rs
migrations/: 20210706231603_create_games_table.sql
scripts/: init_db.sh
server/: Cargo.toml
server/src/: error.rs  lib.rs
src/: board.rs  config.rs  error.rs  lib.rs  session.rs
src/game/: board.rs  mod.rs
