[package]
name = "sidestacker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sidestacker"
path = "src/bin/main.rs"

[lib]
name = "sidestacker"
path = "src/lib.rs"

[dependencies]
config = "*"
serde = { version = "*", features = ["derive"] }
sqlx = { version = "*", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "migrate"] }
structopt = "*"