[package]
name = "sidestacker-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/main.rs"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
rusqlite = "*"
serde = { version = "*", features = ["derive"] }
structopt = "*"