[package]
name = "sidestacker-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
futures = "*"
rusqlite = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
structopt = "*"
tokio = { version = "*", features = ["full", "macros"] }
tokio-util = { version = "*", features = ["codec"] }